Got a basic form showing

--- a/app/views/imports/new.html.erb
+++ b/app/views/imports/new.html.erb
@@ -4,9 +4,7 @@
     react_component(
       'FileUploadInput',
       form: {
-        action: f.action,
-        csrf_param: f.csrf_param,
-        csrf_token: f.csrf_token
+        action: "new_import"
       },
       placeHolder: "File...",
       labelText: "Upload",
