Still not working

--- a/app/views/imports/new.html.erb
+++ b/app/views/imports/new.html.erb
@@ -1,4 +1,4 @@
 <h2>Upload Your Mint Export</h2>
 <%= form_for @import do |f| %>
-  <%= react_component('FileDropArea') %>
+  <%= react_component('app.FileDropArea') %>
 <% end %>
